# TM_oop_lab2

./: README.md  pyproject(2).toml  pyproject.toml
examples/: rational_example.py
figure_package/: figure.py
tasks/: pair.py  task_1.py  task_2.py
tasks/money_package/: __init__.py
tasks/octal_package/: __init__.py  octal.py
tests/: test_octal.py  test_pair.py
